--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@ text{
 /********************************************************************/
 
 body {
-    width: 100vh;
-    height: 100vh;
+    min-width: 100vhx;
+    min-height: 100vh;
     background-color: #0093E9;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    background-repeat: no-repeat;
    
    
 }
