--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ text{
 /********************************************************************/
 
 body {
-    min-width: 100vhx;
+    min-width: 100%;
     min-height: 100vh;
     background-color: #0093E9;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
